# llmops

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt  requirements_dev.txt
app/: chat.py  embed_file.py  embeddings.py  index.py  lmstudio.py  main.py  models.py  repository.py  scraper.py  service.py
app/llmops_app/api/: main.py
app/llmops_app/cli/: index_file.py
app/llmops_app/infrastructure/: chat_client.py  embeddings.py  language_model.py  qdrant_store.py
app/llmops_app/use_cases/: answer_question.py  index_file.py
data/: embedding.py  issue.py  sql_json.py  sum.py
doc/cognitive_maps/: 2026-05-04-ia-as-cognitive-infrastructure.md  combat_system_reference.md
lib/: timeout.py
sample/: bench.sh  embed.py  embed_with_hugs.py  embed_with_moderbert.py  embed_with_openai.py  embeddings_benchmark.py  summarize.py  try_ollama.py
scripts/: start_pgvector.sh
service/: embed_issues.py
src/llmops/: __init__.py  config.py
src/llmops/api/: main.py
src/llmops/cli/: cognitive_map.py  graph_context.py  index_file.py
src/llmops/infrastructure/: chat_client.py  embeddings.py  language_model.py  qdrant_store.py
src/llmops/ui/: __init__.py  streamlit_chat.py
src/llmops/use_cases/: answer_question.py  cognitive_map.py  graph_context.py  index_file.py
sum_api/: Dockerfile
sum_api/app/: main.py  requirements.txt
templates/codex/: config.toml
templates/codex/agents/: migration-explorer.toml  migration-reviewer.toml  migration-worker.toml
templates/docs/: agent-workflow.md  codex-task-state.md
templates/docs/prompts/: compact.md
templates/docs/tasks/: TEMPLATE.md
tests/integration/: test_rag_pipeline.py
tests/unit/: test_core_features.py
