[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmops"
version = "0.4.0"
description = "Local RAG chat app using FastAPI, Streamlit, LlamaIndex, and Qdrant."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0-1.0" }
keywords = ["llmops", "rag", "fastapi", "streamlit", "llama-index", "qdrant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi[standard]",
    "httpx",
    "llama-index",
    "llama-index-vector-stores-qdrant",
    "loguru",
    "openai",
    "qdrant-client",
    "requests",
    "streamlit",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires live local services such as Qdrant, embedding server, or chat model",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "llama_index.embeddings.llama_cpp",
    "requests",
]
ignore_missing_imports = true
